--- a/configs/production/.env
+++ b/configs/production/.env
@@ -1,6 +1,6 @@
 ENV=PRODCUTION
 APP_NAME=Edward
-APP_ID_ANDROID=com.edward
+APP_ID_ANDROID=com.fservice
 APP_ID_IOS=com.ltc.edward
 APP_VERSION=1.0.0
 APP_BUILD_CODE_ANDROID=1
