--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ APP_BUILD_CODE_ANDROID=1
 APP_BUILD_CODE_IOS=1
 
 #API BASE URL
-BASE_URL='https://fpoly-hcm.herokuapp.com/api/'
+BASE_URL='http://172.25.128.1:3000/api/'
 
