--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.6.1",
     "react-native-portalize": "^1.0.7",
